# ea-cli-django

./: .dockerignore  .env.example  .env.test  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PLANS.md  PR2_ANALYSIS.md  PR2_CLOSING_COMMENT.md  README.md  TESTING.md  check_excel.py  compare_exports.py  comparison_report_inbox.txt  comparison_report_overview.txt  docker-compose-web-worker.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  start-dev.sh
.claude/: settings.json  settings.local.json  statusline.ps1
.devcontainer/: devcontainer.json
.github/: agents.md  comprehensive-refactor-plan.md  dev_plan.md  dev_plan_phase_a.md  dev_plan_phase_b.md  implementation_log.md  implementation_progress.md  master_plan.md  plan.md  refactor-plan-initial.md  refactor-plan-v2.md  refactor-plan.md  restructuring_note.md
.github/older_docs_for_reference/: FACULTY_AND_EXPORT_FIX.md  PHASE_A_COMPLETION_REPORT.md  PHASE_A_STATUS.md  SESSION_SUMMARY_DEC17.md  STEP_8_COMPLETION.md  additional-modules-plans.md  dev_plan_phase_b.md  dev_plan_v5.md  implementation_log.md  implementation_progress_2.md  refactor-plan_old.md  refactor_plan_draft.md  standalone-dashboard.md  testing_guide.md
.github/prompts/: plan-fixMissingOrgs.prompt.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/core_ingestion_legacy_export_parity_20251219/: plan.md  spec.md
dev_tools/: compare_exports.py  setup_browser_test.py  smoke_test_ingestion.py
docker/: Dockerfile  entrypoint.sh
docs/: PLANS.md  TESTING_RESULTS.md  TEST_COVERAGE_REPORT.md  TEST_SUITE_COMPLETE.md
docs/implementation-notes/: styling-fixes-task-7.md
docs/implementations/: 04-django-partials-implementation.md
docs/plans/: 01-redis-caching.md  02-model-separation.md  03-settings-system.md  04-template-partials.md  05-error-handling.md  06-table-enhancements.md  08-security-hardening.md  09-database-schema-indexes.md  10-async-orm-consistency.md  11-error-handling-logging.md  12-api-validation-documentation.md  13-test-coverage-expansion.md  14-critical-bug-fixes.md  15-transaction-management.md  16-production-readiness.md  17-logging-configuration.md  18-incomplete-enrichment-data.md  19-api-service-layer-consistency.md  20-production-testing-gap.md  README.md
exports/_tmp_faculty_sheets/BMS/: update_info_20251217_020435.txt
exports/_tmp_faculty_sheets/EEMCS/: update_info_20251217_020435.txt
exports/backups/faculty_sheets_20251218_161251/ET/: update_info_20251218_021621.txt
exports/backups/faculty_sheets_20251218_161251/ITC/: update_info_20251218_021622.txt
exports/backups/faculty_sheets_20251218_161251/TNW/: update_info_20251218_021622.txt
exports/backups/faculty_sheets_20251218_190446/BMS/: inbox.xlsx.tmp
exports/faculty_sheets/BMS/: inbox.xlsx.tmp  update_info_20251218_021620.txt
exports/faculty_sheets/EEMCS/: update_info_20251218_021621.txt
scripts/: create_test_data.py  discover_endpoints.py  frontend_verification.sh  generate_legacy_baseline.py  run_legacy_pipeline.py  verify_backend.sh  verify_frontend.js  verify_frontend.sh  verify_frontend_auth.sh
src/: conftest.py  debug_person_fetch.py  manage.py
src/apps/: __init__.py
src/apps/api/: __init__.py  api.py  schemas.py  urls.py  views.py
src/apps/classification/: apps.py
src/apps/core/: admin.py  apps.py  models.py
src/apps/dashboard/: forms.py  middleware.py  urls.py  views.py
src/apps/documents/: models.py  tasks.py
src/apps/enrichment/: apps.py  models.py  tasks.py  urls.py  views.py
src/apps/ingest/: __init__.py  admin.py  apps.py  models.py  tasks.py  urls.py  utils.py  views.py
src/apps/settings/: admin.py  apps.py  models.py
src/apps/steps/: README.md  __init__.py  apps.py  urls.py  views.py
src/apps/users/: admin.py  models.py
src/config/: __init__.py  asgi.py  logging.py  settings.py  university.py  urls.py
src/scripts/: compare_exports.py  migrate_copyright_data.py  migrate_course_links.py  setup_browser_test.py  smoke_test_ingestion.py
src/static/: UT_Logo_Black_EN.eps  UT_Logo_Sta_Black_EN.eps  UT_Logo_Sta_White_EN.eps  UT_Logo_White_EN.eps  stylesheet.css
src/static/css/: ut-brand.css  ut_daisy_ui_theme.css
src/templates/: base.html
src/templates/components/: COMPONENTS.md  _button.html  _card.html  _editable_cell.html  _filter_dropdown.html  _filter_search.html  _progress.html  _stat_card.html  _status_badge.html  _toast.html  _workflow_tabs.html  partials.html
src/templates/dashboard/: _detail_modal.html  _detail_page.html  _detail_panel.html  _error_cell.html  _grid.html  _table.html  _table_row.html  _table_rows.html  dashboard.html
src/templates/registration/: login.html
src/tests/: conftest.py  test_backend_responses.py  test_ui_playwright.py
src/tests/playwright/: README.md  __init__.py  conftest.py  test_dashboard_ui.py  test_ingestion_ui.py  test_legacy_ui.py  test_steps_ui.py  test_visual_regression.py
test_data/: qlik_data.xlsx
test_data/e2e/: base_case_5.xlsx  base_case_5_old.xlsx
test_data/faculty_sheets/: example_column_settings.yaml  update_overview.csv
test_data/faculty_sheets/BMS/: done.xlsx  in_progress.xlsx  inbox.xlsx  overview.xlsx  update_info_20251203_115318.txt  update_info_20251204_135355.txt
test_data/faculty_sheets/EEMCS/: done.xlsx  inbox.xlsx  overview.xlsx  update_info_20251203_115325.txt  update_info_20251204_135357.txt
test_data/faculty_sheets/ET/: done.xlsx  in_progress.xlsx  inbox.xlsx  overview.xlsx  update_info_20251203_115330.txt  update_info_20251204_135358.txt
test_data/faculty_sheets/ITC/: done.xlsx  in_progress.xlsx  inbox.xlsx  overview.xlsx  update_info_20251203_115332.txt  update_info_20251204_135358.txt
test_data/faculty_sheets/TNW/: done.xlsx  inbox.xlsx  overview.xlsx  update_info_20251203_115336.txt  update_info_20251204_135400.txt
thoughts/ledgers/: CONTINUITY_CLAUDE-dev-environment.md  CONTINUITY_CLAUDE-ea-cli-django.md
thoughts/shared/plans/: 2025-12-27-comprehensive-cleanup-refactoring.md  2025-12-27-testing-implementation-phases-4-5.md
(+159 files in other folders)
