[project]
name = "ea-cli-django"
version = "0.0.1"
requires-python = "==3.13.*"
dependencies = [
    "django>=6.0",
    "django-shinobi",
    "django-htmx",
    "django-environ",
    "psycopg[binary]",
    "redis",
    "django-redis",
    "polars[pyarrow]",
    "watchfiles",
    "uvicorn[standard]",
    "httpx",
    "loguru",
    "pypdf",
    "fastexcel",
    "openpyxl",
    "dj-database-url>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "beautifulsoup4>=4.14.3",
    "levenshtein>=0.27.3",
    "tqdm>=4.67.1",
    "kreuzberg>=3.22.0",
    "xxhash>=3.6.0",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = ["ruff", "ipython", "django-debug-toolbar"]
test = ["pytest", "pytest-django", "pytest-cov"]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
]
