[project]
name = "ea-cli-django"
version = "0.0.1"
requires-python = "==3.13.*"
dependencies = [
    "django>=6.0",
    "django-shinobi",
    "django-htmx",
    "django-environ",
    "psycopg[binary]",
    "redis",
    "django-redis",
    "polars[pyarrow]",
    "watchfiles",
    "uvicorn[standard]",
    "httpx",
    "loguru",
    "pypdf",
    "fastexcel",
    "openpyxl",
    "dj-database-url>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "beautifulsoup4>=4.14.3",
    "levenshtein>=0.27.3",
    "tqdm>=4.67.1",
    "kreuzberg[entity-extraction]>=3.22.0",
    "xxhash>=3.6.0",
    "pytest-asyncio>=1.3.0",
    "python-dateutil>=2.9.0.post0",
    "django-tasks[rq]>=0.10.0",
    "django-rq>=3.2.1",
]

[project.optional-dependencies]
dev = ["ruff", "ipython", "django-debug-toolbar"]
test = ["pytest", "pytest-django", "pytest-cov"]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle + pyflakes
    "C90",               # mccabe
    "I",                 # isort
    "N",                 # pep8-naming
    "UP",                # pyupgrade
    "B",                 # flake8-bugbear
    "A",                 # flake8-builtins
    "C4",                # flake8-comprehensions
    "T10",               # flake8-debugger
    "TCH",               # flake8-type-checking
    "PTH",               # flake8-use-pathlib
    "PL",                # pylint
    "RUF",               # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by formatter
    "ISC001", # handled by formatter
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["apps", "ea_cli"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
