
[project]
name = "ea-cli-django"
version = "0.0.1"
requires-python = "==3.13.*"
dependencies = [
    "django>=6.0",
    "django-shinobi",
    "django-htmx",
    "django-environ",
    "psycopg[binary]",
    "redis",
    "django-redis",
    "polars[pyarrow]",
    "watchfiles",
    "uvicorn[standard]",
    "httpx",
    "loguru",
    "pypdf",
    "fastexcel",
    "openpyxl",
    "dj-database-url>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "beautifulsoup4>=4.14.3",
    "levenshtein>=0.27.3",
    "tqdm>=4.67.1",
    "kreuzberg>=3.22.0",
    "xxhash>=3.6.0",
    "pytest-asyncio>=1.3.0",
    "python-dateutil>=2.9.0.post0",
    "django-tasks[rq]>=0.10.0",
    "django-rq>=3.2.1",
    "ty>=0.0.5",
    "pyyaml>=6.0.3",
]


[dependency-groups]
dev = [
    "ruff",
    "django-debug-toolbar",
    "ty",
    "pytest-mock>=3.15.1",
    "pytest-django>=4.11.1",
    "pytest-timeout>=2.4.0",
]

test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-django",
    "pytest-xdist>=3.6.0",
    "pytest-html>=4.1.0",
    "pytest-playwright>=0.7.0",
    "playwright>=1.48.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "ea-cli",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle + pyflakes
    "I",                 # isort
    "N",                 # pep8-naming
    "UP",                # pyupgrade
    "B",                 # flake8-bugbear
    "A",                 # flake8-builtins
    "C4",                # flake8-comprehensions
    "T10",               # flake8-debugger
    "TCH",               # flake8-type-checking
    "RUF",               # ruff-specific rules
]
ignore = [
    "E501",     # line too long, handled by formatter
    "ISC001",   # handled by formatter
    # Django patterns and project-specific ignores:
    "RUF012",   # Mutable class attributes - Django admin pattern
    "PLR2004",  # Magic values - often self-explanatory in context
    "PLR0913",  # Too many arguments - complex Django functions
    "PLR0912",  # Too many branches - complex logic
    "PLR0915",  # Too many statements - complex functions
    "PLR6301",  # Method could be a function - Django pattern
    "C901",     # Too complex - would require major refactoring
    "PTH",      # Pathlib suggestions - not critical
    "UP031",    # Use explicit literals for empty sets - minor
    "E402",     # Module level import not at top - intentional in Django
    "PLC0415",  # Import at top level - intentional in Django
    "N806",     # Variable should be lowercase - common patterns (Mock classes, User=..., constants)
    "B904",     # Exception chaining - good practice but not critical
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["apps", "ea_cli"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ty]
# Type checker configuration for Django project
# Many Django patterns produce false positives, so we disable rules that don't work well with Django's dynamic nature
[[ty.overrides]]
# Enable specific rules that catch real bugs
enable = [
    "invalid-argument-type",
    "invalid-attribute-access",
    "invalid-method-override",
]
# Disable Django-specific false positives
ignore = [
    "unresolved-attribute",  # Django ORM, middleware, admin patterns
    "possibly-missing-attribute",  # Django ORM models
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
